--- a/main.html
+++ b/main.html
@@ -1,5 +1,6 @@
 <!--
-    i changed index.html into main.html
+    student dashboard
+    This page is the main dashboard for students after they log in.
 -->
 <!DOCTYPE html>
 <html lang="en">
